# llm-chat-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  vec_base.py
