[tool.poetry]
name = "llm-chat-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.2.11"
langchain = "^0.0.311"
fastapi = "^0.103.2"
redis = "^5.0.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
chromadb = "^0.4.14"
pypdf = "^3.16.4"
pdfminer-six = "^20221105"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
